--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Website Pessoal</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
   <header>
     <nav class="menu">
@@ -14,9 +16,40 @@
         <li><a href="#">Portfólio</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
+      <div class="line">
     </nav>
-    <h1 class="site-title" >Rodrigo Oliveira</h1>
-    <h2 class="site-subtitle">Web Developer</h2>
+    </div>
+    <div>
+      <h1 class="site-title">Rodrigo Oliveira</h1>
+      <h2 class="site-subtitle">Web Developer</h2>
+    </div>
   </header>
+  <section class="portfolio-content">
+    <h2 class="port-title">Portfólio</h2>
+    <div class="card-content">
+      <figure class="img-card">
+        <img class="img-portfolio" src="assets/portfolio.jpg" alt="Portfólio">
+        <figcaption>Developer</figcaption>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+      </figure>
+
+      <figure class="img-card">
+        <img class="img-portfolio" src="assets/ecommece.jpg" alt="eCommerce">
+        <figcaption>eCommerce</figcaption>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+      </figure>
+
+      <figure class="img-card">
+        <img class="img-portfolio" src="assets/web-design.jpg" alt="web-design">
+        <figcaption>Web designer</figcaption>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+      </figure>
+    </div>
+  </section>
+  
 </body>
+
 </html>
