--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Website Pessoal</title>
+  <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -12,19 +13,19 @@
   <header>
     <nav class="menu">
       <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#portfolio">Portfólio</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
       <div class="line">
     </nav>
     </div>
-    <div>
+    <div class="titulo" >      
       <h1 class="site-title">Rodrigo Oliveira</h1>
       <h2 class="site-subtitle">Web Developer</h2>
     </div>
   </header>
-  <section class="portfolio-content">
+  <section class="portfolio-content" id="portfolio" >
     <h2 class="port-title">Portfólio</h2>
     <div class="card-content">
       <figure class="img-card">
@@ -49,7 +50,28 @@
       </figure>
     </div>
   </section>
-  
+
+  <section class="contato" id="contato">
+      <h2>Contato</h2>
+
+      <div class="container-icons">
+        <div class="icons">
+          <a target="_blank" href="https://github.com/Rodrigo-dev7"><i data-feather="github"></i></a>
+        </div>
+
+        <div class="icons">
+          <a target="_blank" href="https://google.com.br"><i data-feather="linkedin"></i></a>
+        </div>
+
+        <div class="icons">
+          <a target="_blank" href="https://google.com"><i data-feather="instagram"></i></a>
+          </div>
+      </div>
+    </section>
+
+  <script>
+    feather.replace()
+  </script>
 </body>
 
 </html>
