adding new code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,31 @@
       <h2 class="site-subtitle">Web Developer</h2>
     </div>
   </header>
-  <section class="portfolio-content" id="portfolio" >
+
+  <section  id="sobre" class="sobre container2">
+    <h2>Sobre</h2>
+
+    <div class="about">
+      <figure class="avatar" >
+        <img src="assets/rdo.png" alt="Rodrigo">
+      </figure>
+      
+      <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Temporibus quaerat at, accusamus,  in, sit minus assumenda <br>
+        eos repellat ad accusantium possimus nesciunt tempora 
+        inventore enim id hic! Veritatis,  At, error sunt?</p>
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+          Temporibus quaerat at, accusamus,  in, sit minus assumenda <br>
+          eos repellat ad accusantium possimus nesciunt tempora 
+          inventore enim id hic! Veritatis,  At, error sunt?</p>
+          
+        <p>
+          Este site contruído durante <a  target="_blank" href="https://www.alura.com.br/imersao-css">Imerção CSS da Alura </a>
+        </p>
+    </div>
+  </section>
+
+  <section class="portfolio-content container2" id="portfolio" >
     <h2 class="port-title">Portfólio</h2>
     <div class="card-content">
       <figure class="img-card">
@@ -51,7 +75,7 @@
     </div>
   </section>
 
-  <section class="contato" id="contato">
+  <section class="contato container2" id="contato">
       <h2>Contato</h2>
 
       <div class="container-icons">
