addring smooth scroll anchor

--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
 
   <script>
     feather.replace()
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+
+          document.querySelector(this.getAttribute('href')).scrollIntoView({
+              behavior: 'smooth'
+          });
+        });
+      });
   </script>
 </body>
 
