adding icon header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-  <header>
+  <header id="home">
     <nav class="menu">
       <ul>
+        <li><a href="#home"><i data-feather="home"></i></a></li>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#portfolio">Portfólio</a></li>
         <li><a href="#contato">Contato</a></li>
