adding link contato

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         </div>
 
         <div class="icons">
-          <a target="_blank" href="https://google.com.br"><i data-feather="linkedin"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/rodrigo-oliveira-seven"><i data-feather="linkedin"></i></a>
         </div>
 
         <div class="icons">
-          <a target="_blank" href="https://google.com"><i data-feather="instagram"></i></a>
+          <a target="_blank" href="https://www.instagram.com/rodrigo.wht/?hl=pt-br"><i data-feather="instagram"></i></a>
           </div>
       </div>
     </section>
